src/objects/CKE_Pack_Request__c.object
<CustomObject>
    <description>A pack request from the Cupcakes site</description>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line2__c</fullName>
        <label>Address Line2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line3__c</fullName>
        <label>Address Line3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BirthDate__c</fullName>
        <label>BirthDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City/Town</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <description>Name of the company for when Cupcake Day is being hosted at work</description>
        <inlineHelpText>Name of the company for when Cupcake Day is being hosted at work</inlineHelpText>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Don&apos;t make this an email field, because the form does interim saves, where the email address may not be valid. Only &apos;Completed&apos; status forms have a valid email address.</description>
        <label>Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Pack_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this field has a value, this record is considered a child to a master. This allows effective de-duping of records. The field will be set by a batch class.</description>
        <label>Master Pack Request</label>
        <referenceTo>CKE_Pack_Request__c</referenceTo>
        <relationshipLabel>Duplicate Pack Requests</relationshipLabel>
        <relationshipName>Child_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_Status__c</fullName>
        <formula>Text(Master_Pack_Request__r.Status__c)</formula>
        <label>Master Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optin_Cupcakes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cupcake Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_Social_Media__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Social Media Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optin_TermsConditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TC Optin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optout_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Post Optout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Progress_Form_Id__c</fullName>
        <label>Progress Form Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proximity_to_Dementia__c</fullName>
        <description>This field will need to map to longer string values on the display page (see the wireframes for the site design).</description>
        <label>Proximity to Dementia</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Person with Dementia</fullName>
                </value>
                <value>
                    <fullName>Current Family or Friend</fullName>
                </value>
                <value>
                    <fullName>Past Family or Friend</fullName>
                </value>
                <value>
                    <fullName>Carer</fullName>
                </value>
                <value>
                    <fullName>Past Carer</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Interested Party</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referer_Header__c</fullName>
        <inlineHelpText>Give the webpage information from the webpage a user was on before arriving at the packrequest form</inlineHelpText>
        <label>Referer Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Domain__c</fullName>
        <formula>MID(Referer_Header__c,  FIND(&apos;//&apos;, Referer_Header__c)+2 , FIND(&apos;/&apos;, Referer_Header__c,9)-FIND(&apos;//&apos;, Referer_Header__c)-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referrer Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Fields_Populated__c</fullName>
        <formula>IF (  ISBLANK(Title__c), 0, 1) + IF ( ISBLANK( First_Name__c ), 0, 1) + IF ( ISBLANK( Last_Name__c ), 0, 1) + IF ( ISBLANK(Email__c), 0, 1) + IF ( ISBLANK( Address_Line1__c ), 0, 1) + IF ( ISBLANK( City__c ), 0, 1) + IF ( ISBLANK( Postcode__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Fields Populated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Amount_Donated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Summary Amount Donated</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Amount_Paid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Summary Amount Paid</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Completed_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Summary Completed Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Duplicate_Count__c</fullName>
        <formula>Summary_Completed_Count__c +  Summary_Incompleted_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Duplicate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Incompleted_Count__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Summary Incompleted Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Summary_Total_Raised__c</fullName>
        <formula>Summary_Amount_Donated__c  +  Summary_Amount_Paid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary Total Raised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Submitted__c</fullName>
        <label>Time Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>CKE Pack Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Last_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Analysis_Complete_Duplicates_2016</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Summary_Total_Raised__c</columns>
        <columns>Summary_Duplicate_Count__c</columns>
        <columns>Summary_Incompleted_Count__c</columns>
        <columns>Summary_Completed_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Pack_Request__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Summary_Duplicate_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Email__c</field>
            <operation>notEqual</operation>
            <value>michelle.simpson@nccgroup.trust</value>
        </filters>
        <label>Analysis : Complete Duplicates 2016</label>
    </listViews>
    <listViews>
        <fullName>Analysis_Incomplete_Duplicates_2016</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Summary_Total_Raised__c</columns>
        <columns>Summary_Duplicate_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Pack_Request__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Summary_Duplicate_Count__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Email__c</field>
            <operation>notEqual</operation>
            <value>michelle.simpson@nccgroup.trust</value>
        </filters>
        <label>Analysis : Incomplete Duplicates 2016</label>
    </listViews>
    <listViews>
        <fullName>Analysis_Incomplete_with_one_Attempt</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Summary_Total_Raised__c</columns>
        <columns>Summary_Amount_Donated__c</columns>
        <columns>Summary_Completed_Count__c</columns>
        <columns>Summary_Duplicate_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master_Pack_Request__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Incomplete</value>
        </filters>
        <filters>
            <field>Summary_Completed_Count__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Summary_Completed_Count__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/9/2016 12:00 AM</value>
        </filters>
        <label>Analysis : Incomplete One Attempt 2016</label>
    </listViews>
    <listViews>
        <fullName>Anonymised_Completed_2018</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Phone__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Progress_Form_Id__c</field>
            <operation>startsWith</operation>
            <value>EVCD18</value>
        </filters>
        <filters>
            <field>Last_Name__c</field>
            <operation>equals</operation>
            <value>Anon</value>
        </filters>
        <label>Anonymised Completed 2018</label>
    </listViews>
    <listViews>
        <fullName>CKE_Development_Testing</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/23/2018 12:00 AM</value>
        </filters>
        <label>CKE Development Testing</label>
    </listViews>
    <listViews>
        <fullName>Complete_2018</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Time_Submitted__c</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <label>Complete 2018</label>
    </listViews>
    <listViews>
        <fullName>Completed_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Address_Line1__c</columns>
        <columns>Postcode__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Time_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Complete This Week</label>
    </listViews>
    <listViews>
        <fullName>Completed_Today</fullName>
        <columns>NAME</columns>
        <columns>Time_Submitted__c</columns>
        <columns>Email__c</columns>
        <columns>Last_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Completed Today</label>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Email__c</columns>
        <columns>Title__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>BirthDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_2016</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <columns>BirthDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Incomplete</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>5/9/2016 12:00 AM</value>
        </filters>
        <filters>
            <field>Progress_Form_Id__c</field>
            <operation>equals</operation>
            <value>EVCD16_KIT</value>
        </filters>
        <label>Incomplete 2016</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_2018</fullName>
        <columns>NAME</columns>
        <columns>Progress_Form_Id__c</columns>
        <columns>Time_Submitted__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>1/1/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Incomplete</value>
        </filters>
        <label>Incomplete 2018</label>
    </listViews>
    <listViews>
        <fullName>Incomplete_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Required_Fields_Populated__c</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Incomplete</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Incomplete This Week</label>
    </listViews>
    <listViews>
        <fullName>Interest_Registered_2017</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Progress_Form_Id__c</field>
            <operation>equals</operation>
            <value>EVCD17_ENQ</value>
        </filters>
        <label>Interest Registered 2017</label>
    </listViews>
    <nameField>
        <displayFormat>CKE-{0000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CKE Pack Requests</pluralLabel>
    <recordTypes>
        <fullName>Register_Interest</fullName>
        <active>true</active>
        <label>Register Interest</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>